--- a/app/src/main/res/drawable/checkbox_outline_green.xml
+++ b/app/src/main/res/drawable/checkbox_outline_green.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:drawable="@drawable/checkbox_outline_un"
-        android:state_checked="false"/>
-    <item
-        android:drawable="@drawable/checkbox_outline_green_sel"
-        android:state_checked="true"/>
-    <item android:drawable="@drawable/checkbox_outline_un"/>
+    <item android:state_checked="false">
+        <shape android:shape="oval">
+            <solid android:color="@color/White"/>
+            <stroke android:color="@color/AchCF" android:width="1dp"/>
+            <size android:height="20dp"/>
+            <size android:width="20dp"/>
+        </shape>
+    </item>
+    <item android:state_checked="true">
+        <layer-list>
+            <item>
+                <shape android:shape="oval">
+                    <solid android:color="@color/White"/>
+                    <stroke android:color="@color/Primary" android:width="1dp"/>
+                    <size android:height="20dp"/>
+                    <size android:width="20dp"/>
+                </shape>
+            </item>
+            <item
+                android:drawable="@drawable/icon_check_green"
+                android:gravity="center">
+            </item>
+        </layer-list>
+    </item>
 </selector>
