--- a/app/src/main/res/drawable/checkbox_rect.xml
+++ b/app/src/main/res/drawable/checkbox_rect.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:drawable="@drawable/checkbox_rect_un"
-        android:state_checked="false"/>
-    <item
-        android:drawable="@drawable/checkbox_rect_sel"
-        android:state_checked="true"/>
-    <item android:drawable="@drawable/checkbox_rect_un"/>
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <size android:height="16dp"/>
+            <size android:width="16dp"/>
+            <solid android:color="@color/White"/>
+            <stroke android:width="1dp" android:color="@color/TextGray"/>
+            <corners android:radius="4dp" />
+        </shape>
+    </item>
+    <item android:state_checked="true">
+        <layer-list>
+            <item>
+                <shape android:shape="rectangle">
+                    <size android:height="16dp"/>
+                    <size android:width="16dp"/>
+                    <solid android:color="@color/White"/>
+                    <stroke android:width="1dp" android:color="@color/TextGray"/>
+                    <corners android:radius="4dp" />
+                </shape>
+            </item>
+            <item
+                android:drawable="@drawable/icon_check_green"
+                android:gravity="center">
+            </item>
+        </layer-list>
+    </item>
 </selector>
