--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,11 @@
         <item name="android:windowIsFloating">true</item>
     </style>
 
+    <style name="AnimationPopupStyle">
+        <item name="android:windowEnterAnimation">@anim/slide_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>
+
     <style name="EtStyle">
         <item name="android:paddingStart">24dp</item>
         <item name="android:paddingTop">14dp</item>
