--- a/app/src/main/res/layout/fragment_intro_base.xml
+++ b/app/src/main/res/layout/fragment_intro_base.xml
@@ -9,6 +9,7 @@
             type="com.thustop_00.intro.IntroBaseFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_intro"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffffff">
@@ -39,56 +40,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:notoTextStyle="regular" />
 
-        <RelativeLayout
-            android:id="@+id/indicator_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.85">
-
-            <me.relex.circleindicator.CircleIndicator3
-                android:id="@+id/indicator"
-                android:layout_width="100dp"
-                android:layout_height="30dp"
-                android:layout_centerInParent="true"
-                app:ci_drawable="@drawable/circle_indicator_sel"
-                app:ci_drawable_unselected="@drawable/circle_indicator_unsel"
-                app:ci_height="10dp"
-                app:ci_margin="8dp"
-                app:ci_width="10dp" />
-
-            <ImageView
-                android:id="@+id/iv_intro_prev"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/indicator"
-                android:layout_toLeftOf="@+id/indicator"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/img_intro_prev" />
-
-            <ImageView
-                android:id="@+id/iv_intro_next"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/indicator"
-                android:layout_toRightOf="@id/indicator"
-                app:srcCompat="@drawable/img_intro_next" />
-
-        </RelativeLayout>
-
 
         <com.thustop_00.widgets.NotoButton
             android:id="@+id/bt_intro_start"
@@ -100,11 +51,35 @@
             android:textColor="@color/White"
             app:notoTextStyle="bold"
             app:layout_constraintWidth_percent="0.55"
+            app:layout_constraintVertical_bias="0.6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/indicator_view"
+            app:layout_constraintTop_toBottomOf="@id/guideline_ic"
             android:onClick="@{intro::onStartClick}"/>
+
+        <ImageView
+            android:id="@+id/iv_intro_prev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_intro_prev"
+            android:layout_marginStart="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline_ic"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_ic"
+            android:visibility="invisible"
+             />
+
+        <ImageView
+            android:id="@+id/iv_intro_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline_ic"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_ic"
+            android:src="@drawable/img_intro_next" />
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -112,6 +87,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_ic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.85"/>
 
 
 
