알림 빨간 마크 추가하려고 공부해봤으나 복잡해서 drawable 바꾸는 방향으로(아무것도 안함)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
                 android:layout_height="@dimen/toolbar_height"
                 android:background="@color/Primary"
                 android:theme="?attr/actionBarTheme"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
 
