--- a/app/src/main/res/layout/fragment_free_ticket_intro.xml
+++ b/app/src/main/res/layout/fragment_free_ticket_intro.xml
@@ -13,10 +13,10 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@id/guideline8"
+            app:layout_constraintBottom_toBottomOf="@id/gl_fft_ripple"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guideline8"
+            app:layout_constraintTop_toTopOf="@id/gl_fft_ripple"
             app:srcCompat="@drawable/bg_free_ticket_ripple" />
 
         <com.gtomato.android.ui.widget.CarouselView
@@ -105,7 +105,7 @@
             app:layout_constraintGuide_begin="@dimen/toolbar_height" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline8"
+            android:id="@+id/gl_fft_ripple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
