--- a/app/src/main/res/layout/fragment_free_ticket_route_selection.xml
+++ b/app/src/main/res/layout/fragment_free_ticket_route_selection.xml
@@ -96,15 +96,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/bt_fft_empty"
                 app:layout_constraintVertical_bias="0.4" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <View
             android:id="@+id/v_fft_pause"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:alpha="0"
             android:background="#65000000"
             android:clickable="true"
             android:focusable="auto"
-            android:visibility="gone"
             android:onClick="@{FreeTicketRouteSelectionFrag::onSelLocalClick}"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -143,6 +145,7 @@
             android:id="@+id/cl_fft_local"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:alpha="0"
             android:background="@drawable/bg_outline_gray_fa"
             android:clickable="true"
             android:focusable="true"
@@ -155,14 +158,14 @@
                 android:id="@+id/gv_fft_local"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginVertical="23dp"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="23dp"
                 android:gravity="center"
                 android:numColumns="3"
                 android:verticalSpacing="23dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_fft_local1"
@@ -172,20 +175,20 @@
                 android:bufferType="spannable"
                 android:text="@string/tv_local1"
                 android:textColor="@color/TextBlack"
-                app:notoTextStyle="bold"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@id/cl_fft_local"
                 app:layout_constraintStart_toStartOf="@id/cl_fft_local"
-                app:layout_constraintTop_toBottomOf="@id/gv_fft_local" />
+                app:layout_constraintTop_toBottomOf="@id/gv_fft_local"
+                app:notoTextStyle="bold" />
 
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_fft_local2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:letterSpacing="-0.07"
                 android:text="@string/tv_local2"
                 android:textSize="9sp"
-                android:letterSpacing="-0.07"
                 app:layout_constraintBottom_toTopOf="@id/tv_fft_request"
                 app:layout_constraintEnd_toEndOf="@id/cl_fft_local"
                 app:layout_constraintStart_toStartOf="@id/cl_fft_local"
