--- a/app/src/main/res/layout/item_region.xml
+++ b/app/src/main/res/layout/item_region.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tv_region"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingStart="15dp"
         android:paddingTop="10dp"
